outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_10-32-20/evaluations/problem_eval-615950356080135169_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines distance, centrality, and a novel "path coherence" factor to encourage smooth transitions while penalizing revisits, with weights that adapt based on both remaining nodes and path history.}
                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines distance, centrality, and a novel "path coherence" factor to encourage smooth transitions while penalizing revisits, with weights that adapt based on both remaining nodes and path history.}
                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
